changed POST to GET
- changed POST methods in Topics to GET
- split publish into publish_message and publish_image
- changed topics and entry_point .yml files
