# python/controller/Topics/swagger.yml
@@ -192,7 +192,7 @@ paths:
       responses:
         "200":
           description: "Successfully created a topic"
-  /topics/{topic_name}/publish/{body}:
+  /topics/{topic_name}/publish/message/{publication_name}/{username}/{content}:
     parameters:
       - name: "topic_name"
         in: path
@@ -200,17 +200,63 @@ paths:
         description: "Name of the topic"
         schema:
           type: "string"
-      - name: "body"
+      - name: "publication_name"
         in: path
         required: true
-        description: "Body of the publication"
+        description: "Name of the publication"
         schema:
-          $ref: "#/components/schemas/Publication"
+          type: "string"
+      - name: "username"
+        in: path
+        required: true
+        description: "Name of the user"
+        schema:
+          type: "string"
+      - name: "content"
+        in: path
+        required: true
+        description: "Content of the message"
+        schema:
+          type: "string"
     get:
-      operationId: "topics.publish"
       tags:
         - Topic
+      operationId: "entry_point.publish_message"
       summary: "Create a publication in the topic"
       responses:
-        "201":
-          description: "Successfully submitted a publication"
+        "200":
+          description: "Successfully submitted a message publication"
+  /topics/{topic_name}/publish/image/{publication_name}/{username}/{image_name}:
+    parameters:
+      - name: "topic_name"
+        in: path
+        required: true
+        description: "Name of the topic"
+        schema:
+          type: "string"
+      - name: "publication_name"
+        in: path
+        required: true
+        description: "Name of the publication"
+        schema:
+          type: "string"
+      - name: "username"
+        in: path
+        required: true
+        description: "Name of the user"
+        schema:
+          type: "string"
+      - name: "image_name"
+        in: path
+        required: true
+        description: "Name of the image"
+        schema:
+          type: "string"
+    get:
+      tags:
+        - Topic
+      operationId: "entry_point.publish_image"
+      summary: "Create a publication in the topic"
+      responses:
+        "200":
+          description: "Successfully submitted an image publication"
